# random-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
metadata/: all_variables.json
src/random_api/: api.py  api_funcs.py  base_functions.py  config.py  main.py  utils_pydantic.py  version.py
src/the_package/: main.py
